<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcmt</name>
  <version>1.0.0</version>
  <description>
  Multi-camera multi-target tracking
  </description>
  <maintainer email="sieniven@gmail.com">niven</maintainer>
  <maintainer email="shaoxuan.seah@gmail.com">shao xuan</maintainer>
  <maintainer email="sps08.lauyanhan@gmail.com">yan han</maintainer>
  <license>Temasek Laboratories, Centre of Flight Sciences</license>
  <url type="website">http://temasek-labs.nus.edu.sg/</url>
  <url type="repository">https://github.com/sieniven/spot-it-3d/</url>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mcmt_bringup</exec_depend>
  <exec_depend>mcmt_detect</exec_depend>
  <exec_depend>mcmt_track</exec_depend>
  <exec_depend>mcmt_msg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
