<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcmt_track_python</name>
  <version>1.0.0</version>
  <description>
  Re-identification package for multi-camera multi-target tracking
  </description>
  <maintainer email="sieniven@gmail.com">niven</maintainer>
  <maintainer email="shaoxuan.seah@gmail.com">shao xuan</maintainer>
  <license>Temasek Laboratories, Centre of Flight Sciences</license>
  <url type="website">http://temasek-labs.nus.edu.sg/</url>
  <url type="repository">https://github.com/sieniven/spot-it-3d/</url>

  <depend>rclpy</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mcmt_detect</depend>
  <depend>mcmt_msg</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
